@@ -4,7 +4,8 @@ Changes
 3.0 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- The ReStructuredText directive "figure" now is translated into the HTML5
+  tag "figure", with the caption becoming a figcaption tag.
 
 
 2.5 (2017-12-10)
